2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Daily_Checklist_Item__c/Warehouse_Daily_Checklist_Item__c.object-meta.xml
<CustomObject>
    <label>Warehouse Daily Checklist Item</label>
    <nameField>
        <displayFormat>WDCI-{0000}</displayFormat>
        <label>Warehouse Daily Checklist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warehouse Daily Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>