2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Daily_Checklist_Item__c/fields/Followup_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Followup_Remarks__c</fullName>
    <label>Followup Remarks</label>
    <type>TextArea</type>
</CustomField>