2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Daily_Checklist_Item__c/fields/Followup_Status__c.field-meta.xml
<CustomField>
    <fullName>Followup_Status__c</fullName>
    <label>Followup Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>