2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Daily_Checklist_Item__c/fields/Master_Checklist_Item__c.field-meta.xml
<CustomField>
    <fullName>Master_Checklist_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Checklist Item</label>
    <referenceTo>Master_Checklist_Item__c</referenceTo>
    <relationshipLabel>Warehouse Daily Checklist Items</relationshipLabel>
    <relationshipName>Warehouse_Daily_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>