2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Daily_Checklist_Item__c/fields/Points_Areas_to_be_checked__c.field-meta.xml
<CustomField>
    <fullName>Points_Areas_to_be_checked__c</fullName>
    <label>Points/Areas to be checked</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>