2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Daily_Checklist_Item__c/fields/Warehouse_Daily_CheckList__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Daily_CheckList__c</fullName>
    <label>Warehouse Daily CheckList</label>
    <referenceTo>Warehouse_Daily_CheckList__c</referenceTo>
    <relationshipLabel>Warehouse Daily Checklist Items</relationshipLabel>
    <relationshipName>Warehouse_Daily_Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>