2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse_Daily_Checklist_Item__c/validationRules/Remark_Field_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Remark_Field_Mandatory</fullName>
    <active>false</active>
    <description>Whenever the picklist value is &quot;NO&quot; the related Remarks field will be mandatory.</description>
    <errorConditionFormula>AND(ISPICKVAL( Answer__c , &quot;No&quot;),ISBLANK( Remarks__c ))</errorConditionFormula>
    <errorDisplayField>Remarks__c</errorDisplayField>
    <errorMessage>Please fill the remarks area</errorMessage>
</ValidationRule>